feat/#73: 워크스페이스 문서 검색 last opened 추가
- last opened 테이블에서 최신순으로 9개를 조회하는 쿼리메서드 구현
- last opened 엔티티를 사용하여 각 문서를 조회하고, converter를 사용하여 WorkspaceResponseDTO.DocumentList를 반환하도록 구현